<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.westga.cs6242.waynemullinsinvestmentcalculator.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#fad68d">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_periodic_payment"
            android:id="@+id/textView"
            android:gravity="left|bottom" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:tag="Payment"
            android:id="@+id/txtPayment" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_rate_per_period"
            android:id="@+id/textView1" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:tag="Rate"
            android:id="@+id/txtRate"
            android:layout_marginLeft="0dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_number_periods"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtPeriods"
            android:tag="Periods"
            android:layout_marginLeft="0dp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_calculate"
        android:id="@+id/btnCalculate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:layout_marginBottom="10dp"
        android:onClick="btnCalculate_onClick" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp">

        <TextView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_future_value"
            android:id="@+id/textView3" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txtValue"
            android:enabled="true"
            android:background="#fdecd2" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/lblError"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:background="#fad68d"
        android:textColor="#ff0000" />
</RelativeLayout>
